# Cover-song-similarity

./: .gitignore  Dockerfile  README.md  docker-compose.yml  download_model.py  pyproject.toml  requirements.txt
src/: app.py
src/api/: constants.py  schemas.py
src/modelling/: __main__.py  architecture.py  train_utils.py
src/preprocess/: __main__.py  dictify.py  prepro_pipe.py  utils.py
tests/: test_create_pairs.py
