[project]
name = "Cover-song-similarity"
version = "0.1.0"
description = "Finds similarity score for tracks"
authors = [
    { name = "ThanAid", email = "thanos.aidins@gmail.com" }
]
readme = "README.md"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "h5py>=3.12.1",
    "tensorflow==2.18.0",
    "loguru==0.7.3",
    "tqdm==4.67.1",
    "fastapi==0.104.1",
    "uvicorn==0.24.0.post1",
    "gdown==5.2.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
select = ["E", "F"]
ignore = ["E501"]
